2015-02-19  Peter Stephenson  <p.stephenson@samsung.com>

	* 34570: Config/version.mk, Src/lex.c, Src/subst.c, Src/zsh.h,
	Test/C01arith.ztst: mark arithmetic substitutions with tokens
	so the substitution code knows what to do.

2015-02-17  Peter Stephenson  <p.stephenson@samsung.com>

	* 34563: Src/input.c: Fix up memory allocation in 34560.

2015-02-16  Peter Stephenson  <p.stephenson@samsung.com>

	* 34560: Src/input. Src/lex.c, Src/zsh.h, Test/C01arith.ztst:
	case of $(( that turned into a $(...) and a (...) with
	multiple lines read before it found out.

	* 34558: Doc/Zsh/func.yo: preexec doc erroneously claimed $1
	was empty if line removed from history.

2015-02-15  Barton E. Schaefer  <schaefer@zsh.org>

	* 34551: Src/builtin.c: Avoid adding an extra "/" to the
	target path in cd_try_chdir() when the current directory is "/"

2015-02-14  Barton E. Schaefer  <schaefer@zsh.org>

	* 34543: Src/input.c, Src/lex.c: Fix crash on garbage bytes
	inside $(...)

2015-02-14  Mikael Magnusson  <mikachu@gmail.com>

	* unposted: Doc/Zsh/prompt.yo: Fix typo from 28487.

2015-02-13  Peter Stephenson  <p.w.stephenson@ntlworld.com>

	* 34546: Src/exec.c, Test/D04parameter.ztst: fix another
	oddity with $_ and anonymous functions and add tests.

2015-02-13  Peter Stephenson  <p.stephenson@samsung.com>

	* 34530: Src/exec.c, Test/E01options.ztst: revised fix
	for PRINT_EXIT_VALUE from anonymous functions.

2015-02-12  Peter Stephenson  <p.w.stephenson@ntlworld.com>

	* 34519: Src/exec.c: handle $_ with arguments to anonymous
	function.

2015-02-12  Barton E. Schaefer  <schaefer@zsh.org>

	* 34514: Src/exec.c, Src/parse.c, Test/E01options.ztst:
	Back out 34485, an alternate solution needs to be worked
	out.  (Tweaked to keep the unrelated hunk of the E01 test.)

	* 34476: Completion/Base/Utility/_store_cache: change the
	assignment format to avoid potentially expensive lexical
	analysis of the array values

2015-02-11  Peter Stephenson  <p.stephenson@samsung.com>
